--- a/package.json
+++ b/package.json
@@ -13,15 +13,26 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@rbxts/compiler-types": "^2.1.1-types.0",
+		"@rbxts/react-reflex": "^0.2.0",
+		"@rbxts/react-roblox": "^0.1.1",
+		"@rbxts/react-ts": "^1.0.1",
+		"@rbxts/reflex": "^4.1.0",
+		"@rbxts/roact": "npm:@rbxts/react-ts@^0.9.0",
+		"@rbxts/services": "^1.5.1",
 		"@rbxts/types": "^1.0.712",
 		"@typescript-eslint/eslint-plugin": "^6.6.0",
 		"@typescript-eslint/parser": "^6.6.0",
 		"eslint": "^8.48.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.0",
+		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-roblox-ts": "^0.0.35",
 		"prettier": "^3.0.3",
 		"roblox-ts": "^2.1.1",
 		"typescript": "^5.2.2"
+	},
+	"dependencies": {
+		"@rbxts/inspect": "^1.0.1",
+		"@rbxts/t": "^3.1.0"
 	}
 }
