--- a/serve.project.json
+++ b/serve.project.json
@@ -12,7 +12,10 @@
 					"include": {
 						"$path": "include",
 						"node_modules": {
-							"$path": "node_modules/@rbxts"
+							"$className": "Folder",
+							"@rbxts": {
+								"$path": "node_modules/@rbxts"
+							}
 						}
 					}
 				}
