--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 	},
 	"dependencies": {
 		"@rbxts/inspect": "^1.0.1",
+		"@rbxts/object-utils": "^1.0.4",
+		"@rbxts/pretty-react-hooks": "^0.2.1",
 		"@rbxts/t": "^3.1.0"
 	}
 }
