--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@rbxts/inspect": "^1.0.1",
 		"@rbxts/object-utils": "^1.0.4",
 		"@rbxts/pretty-react-hooks": "^0.2.1",
-		"@rbxts/t": "^3.1.0"
+		"@rbxts/t": "^3.1.0",
+		"@rbxts/virtualized-list": "^1.3.2"
 	}
 }
