--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.4.1/schema.json",
+	"$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
 	"organizeImports": {
 		"enabled": true
 	},
@@ -15,5 +15,8 @@
 			"indentWidth": 4,
 			"lineWidth": 120
 		}
+	},
+	"files": {
+		"ignore": [".zed"]
 	}
 }
