--- a/package.json
+++ b/package.json
@@ -12,21 +12,20 @@
 	"author": "Jack Taylor",
 	"license": "MIT",
 	"devDependencies": {
-		"@biomejs/biome": "^1.4.1",
-		"@rbxts/compiler-types": "^2.1.1-types.0",
-		"@rbxts/react-reflex": "^0.2.0",
-		"@rbxts/react-roblox": "^0.1.1",
-		"@rbxts/react-ts": "^1.0.1",
-		"@rbxts/reflex": "^4.1.0",
-		"@rbxts/roact": "npm:@rbxts/react-ts@^0.9.0",
-		"@rbxts/services": "^1.5.1",
-		"@rbxts/types": "^1.0.712",
-		"roblox-ts": "^2.1.1",
-		"typescript": "^5.2.2"
+		"@biomejs/biome": "^1.5.3",
+		"@rbxts/compiler-types": "^2.3.0-types.0",
+		"@rbxts/react-reflex": "^0.3.0",
+		"@rbxts/react-roblox": "^0.3.0",
+		"@rbxts/reflex": "^4.3.1",
+		"@rbxts/services": "^1.5.4",
+		"@rbxts/types": "^1.0.754",
+		"roblox-ts": "^2.3.0-dev-4e19cec",
+		"typescript": "^5.3.3"
 	},
 	"dependencies": {
 		"@rbxts/highlighter": "^0.8.2-ts.1",
 		"@rbxts/inspect": "^1.0.1",
-		"@rbxts/t": "^3.1.0"
+		"@rbxts/react": "^0.1.0",
+		"@rbxts/t": "^3.1.1"
 	}
 }
