--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,12 @@
 		"outDir": "out",
 		"baseUrl": "src",
 		"incremental": true,
-		"tsBuildInfoFile": "out/tsconfig.tsbuildinfo"
+		"tsBuildInfoFile": "out/tsconfig.tsbuildinfo",
+
+		"plugins": [
+			{
+				"transform": "rbxts-transform-debug"
+			}
+		]
 	}
 }
